--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -2,17 +2,377 @@
   text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
 .App-link {
-  color: #61dafb;
+  /* color: #61dafb; */
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.navbarlink {
+  color: gray;
+  padding: 15px 25px;
+}
+
+#nav-container {
+  background-color: lightgray;
+  min-height: 100vh;
+  min-width: 100%;
+  padding: 0px;
+}
+
+ul > li > a > i {
+  float: left;
+}
+
+.landing-caraousel {
+  padding-top: 4rem;
+}
+
+#view-area {
+  padding-top: 25px;
+}
+
+.card {
+  min-height: 8rem;
+  max-height: 9.5rem;
+  width: 100%;
+  margin-top: 1rem;
+  border-radius: 14px;
+  background: #f7f8f9;
+
+  box-shadow: 5px 5px 10px #dedfe0, -5px -5px 10px #ffffff;
+}
+
+.card-title {
+  color: #a9a9a9;
+  text-align: center;
+  padding-top: 0.5rem;
+}
+
+.card-num {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.sidebar {
+  padding: 0px;
+  height: 100%;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+}
+
+.scheme-search {
+  padding: 7% 0 2% 0;
+}
+
+.scheme-table {
+  padding-bottom: 5%;
+}
+
+#floating-button {
+  bottom: 10px;
+  float: right;
+  position: fixed;
+  margin-right: 5%;
+  margin-bottom: 3%;
+  margin-left: 41%;
+  background-color: #e76829;
+}
+
+.right-sidebar {
+  display: block;
+  width: 25%;
+  padding: 1rem;
+  background: #f7f8f9;
+  box-shadow: 5px 5px 10px #dedfe0, -5px -5px 10px #ffffff;
+}
+
+.list {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.list::-webkit-scrollbar {
+  display: none;
+}
+
+.scheme-list-items {
+  margin-top: 1rem;
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 0%;
+  min-height: 56px;
+  position: relative;
+}
+
+.add-new-post__editor,
+.add-new-post__editor .ql-editor {
+  text-align: left;
+  background-color: #f6f8fa;
+  border-radius: 10px;
+  min-height: 14rem;
+  min-width: 85%;
+  max-width: 85%;
+}
+
+.add-new-post__editor .ql-editor,
+.add-new-post__editor .ql-container {
+  border-radius: 4px;
+  background: #ffffff;
+  box-shadow: inset 6px 6px 12px #f2f2f2, inset -6px -6px 12px #ffffff;
+
+  background-color: white;
+}
+
+.form-box {
+  width: 45%;
+  border-radius: 4px;
+  background: #ffffff;
+  box-shadow: inset 6px 6px 12px #f2f2f2, inset -6px -6px 12px #ffffff;
+}
+
+/* For dicussions page only */
+
+/* D-Editor */
+.d-editor__editor,
+.d-editor__editor .ql-editor {
+  text-align: left;
+  background-color: #f6f8fa;
+  border-radius: 12px;
+  min-height: 13rem;
+  min-width: 100%;
+  max-width: 100%;
+}
+
+.d-editor__editor .ql-editor,
+.d-editor__editor .ql-container {
+  border-radius: 4px;
+  background: #ffffff;
+  box-shadow: inset 6px 6px 12px #f2f2f2, inset -6px -6px 12px #ffffff;
+
+  background-color: white;
+}
+
+.icon-img {
+  height: 40px;
+  min-height: initial;
+  width: 40px;
+  position: cover;
+  /* margin-left: 4px; */
+  border-radius: 50%;
+}
+
+.discussion-image {
+  display: inline-block;
+  overflow: hidden;
+  line-height: 1;
+  vertical-align: middle;
+}
+
+.discussion-div {
+  margin: 2rem 4rem 2rem 4rem;
+  padding: 2rem 4rem 2rem 4rem;
+  background-color: #ffffff;
+}
+
+.discussion-container {
+  margin: 2rem 0;
+}
+
+.chats::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 110px;
+  display: block;
+  width: 3px;
+  content: "";
+  background-color: #e1e4e8;
+}
+
+.message {
+  max-height: auto;
+  font-size: 15px;
+  text-align: left;
+  border-color: #e1e4e8;
+  position: relative;
+  color: #000000;
+  background-color: #fff;
+  border: 1px solid #d1d5da;
+  border-radius: 6px;
+}
+
+.message::before {
+  position: absolute;
+  top: 9px;
+  right: 100%;
+  left: -16.8px;
+  display: block;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  content: " ";
+  border-color: transparent;
+  border-right-color: transparent;
+  border-style: solid solid outset;
+  border-width: 9px;
+  border-right-color: #e1e4e8;
+}
+
+.body {
+  color: #24292e;
+  padding: 1rem;
+}
+
+.heading {
+  color: #24292e;
+  padding: 0 0 0.1rem 0;
+  font-weight: 600;
+  border-bottom: 1px solid #eaecef;
+}
+
+.body-description {
+  clear: both;
+  line-height: 18px;
+  font-size: 14px;
+  padding: 1rem 0 0.5rem 0;
+  color: #24292e;
+}
+
+.chats {
+  margin: 2rem 1rem 2rem 1rem;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  padding: 0.5rem 1rem;
+  color: #586069;
+  background-color: #f6f8fa;
+  border-bottom: 1px solid #d1d5da;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-color: #e1e4e8;
+}
+
+.header .date {
+  color: #24292e;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.discussion-editor-box {
+  border-top: 4px solid #e1e4e8;
+}
+
+.comment-box::before {
+  position: absolute;
+  top: 9px;
+  right: 100%;
+  left: -16.8px;
+  display: block;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  content: " ";
+  border-color: transparent;
+  border-right-color: transparent;
+  border-style: solid solid outset;
+  border-width: 9px;
+  border-right-color: #e1e4e8;
+}
+
+/* Discussions RightBar */
+
+.discussions-rightbar {
+  float: right;
+}
+
+.right-siderbar-main-container {
+  text-align: left;
+  margin: 1rem 2rem 1rem 0;
+}
+
+.discussions-heading-sidebar {
+  margin-bottom: 8px;
+  font-size: 12px;
+  color: #586069;
+  font-weight: 600;
+}
+
+.main-man-img {
+  height: 27px;
+  min-height: initial;
+  width: 27px;
+  position: cover;
+  margin-right: 4px;
+  border-radius: 50%;
+}
+
+.labels-div {
+  font-size: 10 !important;
+  border-radius: 30px;
+  background-color: #85b5fc;
+  font-weight: bold;
+  color: white;
+  padding: 0.2rem 0.45rem;
+  display: inline-block;
+  clear: both;
+  float: left;
+  margin-bottom: 2rem;
+}
+
+.discussion-main-man {
+  border-bottom: 1px solid #eaecef;
+  padding: 0.5rem 0;
+}
+.discussions-labels {
+  height: 5.5rem;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #eaecef;
+}
+.notifications-subscribe {
+  border-bottom: 1px solid #eaecef;
+  padding: 0.5rem 0;
+}
+.discussions-participants {
+  border-bottom: 1px solid #eaecef;
+  padding: 0.5rem 0;
 }
